[build-system]
#requires = ["setuptools>=42", "wheel"]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "torchEBM"
#version = "0.1.0"
dynamic = ["version"]

description = "Components and algorithms for energy-based models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Soran Ghaderi", email = "soran.gdr.cs@gmail.com" }]
keywords = ["deep-learning", "energy-based-models", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.800",
    "black>=20.8b1",
    "isort>=5.0",
]
[project.urls]
homepage = "https://github.com/soran-ghaderi/torchebm"
#documentation = "https://torchebm.readthedocs.io"
#repository = "https://github.com/soran-ghaderi/torchebm.git"
#changelog = "https://github.com/soran-ghaderi/torchebm/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "torchEBM/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py38', 'py39']

[tool.isort]
profile = "black"
multi_line_output = 3