[build-system]
#requires = ["setuptools>=42", "wheel"]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"
#build-backend = "poetry.core.masonry.api"


[project]
name = "torchebm"
#version = "0.0.0"
dynamic = [
    "version",
    "dependencies",
    "license",
    "description",
    "authors",
    "keywords"
]
description = "Components and algorithms for energy-based models"
readme = "README.md"
license = { file = "LICENSE" }
#license = "MIT"
authors = [{ name = "Soran Ghaderi", email = "soran.gdr.cs@gmail.com" }]
keywords = ["deep-learning", "energy-based-models", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Machine Learning",
    "Operating System :: OS Independent",
]

#packages = [
#    { include = "torchebm" }
#]

#dependencies = [
#    "torch>=2.0.0",
#    "numpy>=1.20.0",
#    "matplotlib>=3.4.0"
#]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.800",
    "black>=20.8b1",
    "isort>=5.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.18",
    "mike>=1.0.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocs-glightbox>=0.2.0",
    "mkdocs-minify-plugin>=0.5.0",
    "mkdocs-blog-plugin>=0.1.0",
    "mkdocs-autolinks-plugin>=0.5.0",
]

[project.urls]
homepage = "https://github.com/soran-ghaderi/torchebm"
documentation = "https://soran-ghaderi.github.io/torchebm/"
repository = "https://github.com/soran-ghaderi/torchebm.git"
#changelog = "https://github.com/soran-ghaderi/torchebm/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "torchebm/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py38', 'py39']

[tool.isort]
profile = "black"
multi_line_output = 3