[build-system]
#requires = ["setuptools>=42", "wheel"]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"
#build-backend = "poetry.core.masonry.api"


[project]
name = "torchebm"
#version = "0.0.0"
dynamic = ["version"]
description = "Components and algorithms for energy-based models"
readme = "README.md"
license = { file = "LICENSE" }
#license = "MIT"
authors = [{ name = "Soran Ghaderi", email = "soran.gdr.cs@gmail.com" }]
keywords = ["deep-learning", "energy-based-models", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

#packages = ["torchebm"]

dependencies = [
    "torch",
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.800",
    "black>=20.8b1",
    "isort>=5.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.18",
    "mike>=1.0.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-blog-plugin>=0.1.0",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-literate-nav>=0.4.0",
    "mkdocs-section-index>=0.3.0",
    "pymdown-extensions>=9.0",
    "mkdocs-autorefs",
]

[project.urls]
homepage = "https://github.com/soran-ghaderi/torchebm"
documentation = "https://soran-ghaderi.github.io/torchebm/"
repository = "https://github.com/soran-ghaderi/torchebm.git"
#changelog = "https://github.com/soran-ghaderi/torchebm/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
write_to = "torchebm/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools.packages.find]
where = ["."]